fix logs behind bottom bar

--- a/src/main/resources/webapp/bootstrap/css/logstation.css
+++ b/src/main/resources/webapp/bootstrap/css/logstation.css
@@ -16,7 +16,8 @@ footer {
 }
 
 .logbody {
-    font-family: Courier New, monospace
+    font-family: Courier New, monospace;
+    padding-bottom: 31px;
 }
 
 .navbar {
